instruction state added and made some changes to difficulty level

--- a/birdGame/birdGame.csproj
+++ b/birdGame/birdGame.csproj
@@ -64,11 +64,14 @@
     <Content Include="assets\images\chuck.jpg" />
     <Content Include="assets\images\chuckButton.png" />
     <Content Include="assets\images\easyButton.png" />
+    <Content Include="assets\images\egg.jpg" />
     <Content Include="assets\images\egg.png" />
     <Content Include="assets\images\enemy.gif" />
+    <Content Include="assets\images\enemy.jpg" />
     <Content Include="assets\images\enemybird.png" />
     <Content Include="assets\images\hardButton.png" />
     <Content Include="assets\images\instructionButton.png" />
+    <Content Include="assets\images\mainmenuButton.png" />
     <Content Include="assets\images\mediumButton.png" />
     <Content Include="assets\images\play.png" />
     <Content Include="assets\images\playagainbutton.png" />
@@ -108,6 +111,7 @@
     <TypeScriptCompile Include="Scripts\objects\background.ts" />
     <TypeScriptCompile Include="Scripts\objects\bird.ts" />
     <TypeScriptCompile Include="Scripts\objects\button.ts" />
+    <TypeScriptCompile Include="Scripts\objects\egg.ts" />
     <TypeScriptCompile Include="Scripts\objects\enemy.ts" />
     <TypeScriptCompile Include="Scripts\objects\gameObject.ts" />
     <TypeScriptCompile Include="Scripts\objects\label.ts" />
@@ -115,6 +119,7 @@
     <TypeScriptCompile Include="Scripts\objects\scoreboard.ts" />
     <TypeScriptCompile Include="Scripts\states\difficultyLevel.ts" />
     <TypeScriptCompile Include="Scripts\states\gameover.ts" />
+    <TypeScriptCompile Include="Scripts\states\instruction.ts" />
     <TypeScriptCompile Include="Scripts\states\menu.ts" />
     <TypeScriptCompile Include="Scripts\states\play.ts" />
     <TypeScriptCompile Include="Scripts\states\playerSelect.ts" />
